# proton-drive-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  RELEASE.md  build.bat  build.py  build.sh
.github/workflows/: build.yml  release.yml  release_lib.yml
docs/: BUILDING.md
proton-bindings/: Cargo.toml
proton-drive/: Cargo.toml
proton-drive/src/: auth.rs  index.rs  main.rs
proton-ffi/: Cargo.toml
proton-sdk-rs/: Cargo.toml  README.md
proton-sdk-rs/src/: cancellation.rs  downloads.rs  drive.rs  lib.rs  observability.rs  sessions.rs  uploads.rs  utils.rs
proton-sdk-sys/: Cargo.toml  build.rs
proton-sdk-sys/protos/: account.proto  drive.proto
proton-sdk-sys/src/: cancellation.rs  data.rs  downloads.rs  drive.rs  lib.rs  logger.rs  nodes.rs  observability.rs  protobufs.rs  sessions.rs  tests.rs  uploader.rs  uploads.rs
