[package]
name = "proton-drive"
version = "0.1.0"
edition = "2024"

[dependencies]
proton-sdk-rs = {path = "../proton-sdk-rs"}
proton-sdk-sys = {path = "../proton-sdk-sys"}
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
async-recursion = "1.1.1"
uuid = { version = "1.17", features = ["v4"] }
chrono = "0.4"
mime_guess = "2.0.5"
r2d2 = "0.8.10"
r2d2_sqlite = "0.30.0"
rpassword = "7.4.0"
