[package]
name = "proton-sdk-rs"
version = "0.1.0"
edition = "2021"
authors = ["tk <4tkbytes@pm.me>"]
license = "MIT"
description = "A safe rust binding for the Proton Apps SDK such as Proton Drive, derived from proton-sdk-sys. Currently a WIP"
repository = "https://github.com/4tkbytes/proton-sdk-rs"
readme = "../README.md"

[features]
drive = []

[dependencies]
proton-sdk-sys ={ path = "../proton-sdk-sys"}
anyhow = "1.0.98"
thiserror = "2.0.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"