[package]
name = "proton-sdk-sys"
version = "0.1.0"
edition = "2021"
authors = ["tk <4tkbytes@pm.me>"]
license = "MIT"
description = "An unsafe rust binding for the Proton Apps SDK. Currently a WIP"
repository = "https://github.com/4tkbytes/proton-sdk-rs"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
libc = "0.2"
libloading = "0.8"
prost = "0.14"
prost-types = "0.14"
thiserror = "2.0.1"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
prost-build = "0.14"
